# BreakoutMIDI

./: index.html  main.js  package-lock.json  package.json  preload.js  server.js  start.bat
vst/: CMakeLists.txt  deploy.ps1
vst/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Simulation.cpp  Simulation.h
